[gd_scene load_steps=10 format=3 uid="uid://dbnaeaduwx26k"]

[ext_resource type="Script" uid="uid://be0232fs3ae7x" path="res://Game/GameObjects/Card/card.gd" id="1_rjlel"]
[ext_resource type="Resource" uid="uid://bkgp6jnu3lnut" path="res://Resources/CardResources/big_loan.tres" id="2_o6ois"]
[ext_resource type="Material" uid="uid://bxvqo8agydttj" path="res://Resources/pseudo_3d.tres" id="3_7eoxm"]
[ext_resource type="Texture2D" uid="uid://dag60ck0m7n37" path="res://Assets/Cards/PlayCardLayoutBack.png" id="4_7eoxm"]
[ext_resource type="Texture2D" uid="uid://b2b3yada0mr8y" path="res://Assets/Cards/CardPictures/PlayCard_SmallLoan.png" id="4_sjjv7"]
[ext_resource type="FontFile" uid="uid://b4nwhv1gcm4oj" path="res://Game/UserInterface/fonts/Kenney High.ttf" id="4_vp6x2"]
[ext_resource type="PackedScene" uid="uid://j55qjag48pv7" path="res://hover_sfx.tscn" id="7_1hrwn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rjlel"]
size = Vector2(54, 78)

[sub_resource type="LabelSettings" id="LabelSettings_sjjv7"]
font = ExtResource("4_vp6x2")
font_size = 8
font_color = Color(0.0121738, 0.149541, 0.139935, 1)
outline_color = Color(0, 0, 0, 1)

[node name="Card" type="Node2D"]
script = ExtResource("1_rjlel")
card_resource = ExtResource("2_o6ois")

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="CardLayout" type="Sprite2D" parent="BackBufferCopy"]
material = ExtResource("3_7eoxm")
texture = ExtResource("4_7eoxm")

[node name="CardImage" type="Sprite2D" parent="BackBufferCopy"]
visible = false
material = ExtResource("3_7eoxm")
texture = ExtResource("4_sjjv7")
offset = Vector2(0, -11)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_rjlel")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -27.0
offset_top = -39.0
offset_right = 27.0
offset_bottom = 39.0

[node name="CardName" type="Label" parent="."]
visible = false
clip_contents = true
offset_left = -25.0
offset_top = -39.0
offset_right = 25.0
offset_bottom = -22.0
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_sjjv7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDescription" type="Label" parent="."]
visible = false
clip_contents = true
offset_left = -24.0
offset_top = 6.0
offset_right = 24.0
offset_bottom = 36.0
text = "PLACEHOLDER"
label_settings = SubResource("LabelSettings_sjjv7")
horizontal_alignment = 1
autowrap_mode = 3

[node name="HoverSfx" parent="." instance=ExtResource("7_1hrwn")]
volume_db = -12.0

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
